// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component Comment Comment renders correctly 1`] = `
<View
  style={
    Object {
      "borderLeftColor": "#C4C4C4",
      "borderLeftWidth": 1,
      "paddingBottom": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": -12,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/ProfileDefault.png",
        }
      }
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Bold",
            "fontSize": 12,
            "lineHeight": 14,
            "marginLeft": 17,
          }
        }
      >
        test
         •
      </Text>
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 10,
            "lineHeight": 12,
          }
        }
      >
         
        
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#333333",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "marginLeft": 28,
      }
    }
  >
    test
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginTop": 11.13,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#C4C4C4"
        name="back"
        size={15.77}
      />
      <Text
        style={
          Object {
            "color": "#C4C4C4",
            "fontFamily": "Inter-Regular",
            "fontSize": 13,
            "marginLeft": 8.98,
          }
        }
      >
        Reply
      </Text>
    </View>
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginLeft": 28.61,
          "marginRight": 28.51,
          "opacity": 1,
        }
      }
    >
      <Icon
        color="#C4C4C4"
        name="block"
        size={15.02}
      />
    </View>
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "marginRight": 33.04,
          "opacity": 1,
        }
      }
    >
      <View />
    </View>
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View />
    </View>
  </View>
</View>
`;

exports[`component Comment Comment snapshot 1`] = `
<View
  style={
    Object {
      "borderLeftColor": "#C4C4C4",
      "borderLeftWidth": 1,
      "paddingBottom": 16,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginLeft": -12,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/ProfileDefault.png",
        }
      }
      style={
        Object {
          "height": 24,
          "width": 24,
        }
      }
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Bold",
            "fontSize": 12,
            "lineHeight": 14,
            "marginLeft": 17,
          }
        }
      >
        test
         •
      </Text>
      <Text
        style={
          Object {
            "color": "#828282",
            "fontFamily": "Inter-Regular",
            "fontSize": 10,
            "lineHeight": 12,
          }
        }
      >
         
      </Text>
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#333333",
        "fontFamily": "Inter-Regular",
        "fontSize": 16,
        "marginLeft": 28,
      }
    }
  >
    test
  </Text>
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "flex-end",
        "marginTop": 11.13,
      }
    }
  >
    <ForwardRef
      onPress={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Icon
        color="#C4C4C4"
        name="back"
        size={15.77}
      />
      <Text
        style={
          Object {
            "color": "#C4C4C4",
            "fontFamily": "Inter-Regular",
            "fontSize": 13,
            "marginLeft": 8.98,
          }
        }
      >
        Reply
      </Text>
    </ForwardRef>
    <ForwardRef
      style={
        Object {
          "marginLeft": 28.61,
          "marginRight": 28.51,
        }
      }
    >
      <Icon
        color="#C4C4C4"
        name="block"
        size={15.02}
      />
    </ForwardRef>
    <ForwardRef
      style={
        Object {
          "marginRight": 33.04,
        }
      }
    >
      <Memo(Ic_arrow_down_vote_off)
        height={18}
        width={18}
      />
    </ForwardRef>
    <ForwardRef>
      <Memo(Ic_arrow_upvote_off)
        height={18}
        width={18}
      />
    </ForwardRef>
  </View>
</View>
`;
